lang-grammar.txt
special characters:
	@epsilon - it represents an 'epsilon' transition to state

directives:
	initial - it allows mark states which represent an initial states
	final - it allows mark states which represent a final states

file: statement_list;

statement_list: statement
	| statement, statement_list
	;

statement: directive | rule ;

rule: transition "by" character_list ;

transition: state "to" state
	| state "->" state
	;

state: identifier ;

directive: directive_initial
	| directive_final
	;

directive_initial: "initial" state_list;

directive_final: "final" state_list;

state_list: state
	| state, state_list
	;

keyword: "initial"
	| "final"
	| "to"
	| "by"
	;

identifier_list: identifier
	| identifier, identifier_list
	;

character_list: character
	| special-character
	| character, character_list
	| special-character, character_list
	;

special-character: @ identifier;

identifier: identifier-start-letter;

identifier-start-letter: [a-zA-Z_]
	| [a-zA-Z_] identifier-letter
	;

identifier-letter: [a-zA-Z0-9_]
	| [a-zA-Z0-9_] identifier-letter
	;

character: ' character-letter ';


character-letter:
		any member of the source character set except the single-quote, backslash, or new-line charater
	|	escape-sequence
	;

escape-sequence: \', \\;
